# Firmware-para-IDF-Espressif

./: README.md
ESP-IDF/access-point/: CMakeLists.txt  README.md
ESP-IDF/ap-wifi/: CMakeLists.txt
ESP-IDF/calculo-velocidade/: CMakeLists.txt  README.md
ESP-IDF/comunicacao-api/: CMakeCache.txt  CMakeLists.txt  README.md  api.py
ESP-IDF/dfplayer-mini/: CMakeLists.txt  README.md  sdkconfig
ESP-IDF/display-oled/: .gitignore  CMakeLists.txt  README.md
ESP-IDF/emonlib/: CMakeLists.txt  README.md
ESP-IDF/esp32_cam/: .gitattributes  .gitignore  README.md
ESP-IDF/imu-c3/: CMakeLists.txt
ESP-IDF/led-strip/: CMakeLists.txt  README.md  diagram.json  wokwi.toml
ESP-IDF/ota-https/: CMakeLists.txt  README.md
ESP-IDF/pisca-led/: CMakeLists.txt  README.md
ESP-IDF/protocolo-ibus/: CMakeLists.txt  README.md
ESP-IDF/pulsein_idf/: CMakeLists.txt  README.md
ESP-IDF/pwm-rtos/: CMakeLists.txt  README.md
ESP-IDF/rgb-ws2812b/: CMakeLists.txt  README.md  diagram.json  wokwi.toml
ESP-IDF/scan-wifi/: CMakeLists.txt  sdkconfig
ESP-IDF/servo-motor/: CMakeLists.txt  (+1 more)
ESP-IDF/servo-uart/main/: CMakeLists.txt  main.c
ESP-IDF/servo-uart/main/task/servo_control/: CMakeLists.txt  servo_control.c
ESP-IDF/servo-uart/main/task/servo_control/include/: servo_control.h
ESP-IDF/servo-uart/main/task/uart_control/: CMakeLists.txt  uart_control.c
ESP-IDF/servo-uart/main/task/uart_control/include/: uart_control.h
ESP-IDF/wifi-manager/main/: CMakeLists.txt  Kconfig  main.c  sdkconfig.h  wifi_manager.c  wifi_manager.h
access-point/: CMakeLists.txt
scan-wifi/: CMakeLists.txt
(+143 files in other folders)
